--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "file-saver": "^2.0.5",
     "graphql": "^16.11.0",
     "html-to-image": "^1.11.13",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
